--- a/Lecture-Question-Answer-Generation-Model.ipynb
+++ b/Lecture-Question-Answer-Generation-Model.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "bfc1d41c",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "1b9a8978",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "c1d43314",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "924bae63",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "3fdb5475",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5ab20d20",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
     "                },\n",
     "                \"required\": [\"question\", \"options\" ,\"correct_answer\", \"answer_explanation\"]\n",
     "            },\n",
-    "            \"description\": \"This array contains all the hard difficulty questions, correct answers and explanations\",\n",
+    "            \"description\": \"This array contains all the hard difficulty questions, correct answers and answer explanations\",\n",
     "        },\n",
     "        \"medium_difficult_questions\": {                        \n",
     "            \"type\": \"array\",\n",
@@ -326,7 +326,7 @@
     "                },\n",
     "                \"required\": [\"question\", \"options\" ,\"correct_answer\", \"answer_explanation\"]\n",
     "            },\n",
-    "            \"description\": \"This array contains all the medium difficulty questions, correct answers and explanations\",\n",
+    "            \"description\": \"This array contains all the medium difficulty questions, correct answers and answer explanations\",\n",
     "        },\n",
     "        \"easy_difficult_questions\": {                        \n",
     "            \"type\": \"array\",\n",
@@ -355,7 +355,7 @@
     "                },\n",
     "                \"required\": [\"question\", \"options\" ,\"correct_answer\", \"answer_explanation\"]\n",
     "            },\n",
-    "            \"description\": \"This array contains all the easy difficulty questions, correct answers and explanations\",\n",
+    "            \"description\": \"This array contains all the easy difficulty questions, correct answers and answer explanations\",\n",
     "        },\n",
     "        \"Topic_importance_rating\": {\n",
     "            \"type\": \"string\",\n",
@@ -388,13 +388,13 @@
     "\"\"\"\n",
     "        }\n",
     "    },\n",
-    "    \"required\": [\"all_questions\", \"Topic_importance_rating\"]\n",
+    "    \"required\": [\"hard_difficult_questions\", \"medium_difficult_questions\", \"easy_difficult_questions\",\"Topic_importance_rating\"]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "29ca47f5",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "0b49ef17",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "77b8b552",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "253ffe32",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c1d204ca",
    "metadata": {},
    "outputs": [],
@@ -590,14 +590,36 @@
    "execution_count": null,
    "id": "c2ddf133",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 2.0 seconds as it raised InternalServerError: 500 An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n"
+     ]
+    }
+   ],
    "source": [
     "cumulative_concise_summary = \"\"\n",
     "cumulative_detailed_summary = \"\"\n",
     "for i in range(total_pdfs):\n",
     "    current_page_number = i + 1\n",
     "\n",
-    "    pdf_name = pdf_output_folder / f\"page_{current_page_number}.pdf\"\n",
+    "    pdf_name = split_pdf_dir / f\"page_{current_page_number}.pdf\"\n",
     "    loader = PDFMinerLoader(pdf_name)\n",
     "    docs = loader.load()\n",
     "    page_text = docs[0].page_content\n",
@@ -616,7 +638,7 @@
     "    detailed_page_summary = result[\"detail_page_summary\"]\n",
     "\n",
     "    # Save results\n",
-    "    page_folder = output_folder / f\"page_{current_page_number}\"\n",
+    "    page_folder = output_dir / f\"page_{current_page_number}\"\n",
     "    page_folder.mkdir(parents=True, exist_ok=True)\n",
     "    question_json = page_folder / \"question.json\"\n",
     "\n",
@@ -632,6 +654,14 @@
     "    with cumulative_concise_summary_file.open(\"w\") as f:\n",
     "        f.write(cumulative_concise_summary) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c274285",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
