--- a/Lecture-Question-Answer-Generation-Model.ipynb
+++ b/Lecture-Question-Answer-Generation-Model.ipynb
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c2ddf133",
    "metadata": {},
    "outputs": [
@@ -605,6 +605,9 @@
       "Key 'parameters' is not supported in schema, ignoring\n",
       "Key 'parameters' is not supported in schema, ignoring\n",
       "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Key 'parameters' is not supported in schema, ignoring\n",
+      "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 2.0 seconds as it raised InternalServerError: 500 An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n",
       "Key 'parameters' is not supported in schema, ignoring\n",
       "Key 'parameters' is not supported in schema, ignoring\n",
       "Retrying langchain_google_genai.chat_models._chat_with_retry.<locals>._chat_with_retry in 2.0 seconds as it raised InternalServerError: 500 An internal error has occurred. Please retry or report in https://developers.generativeai.google/guide/troubleshooting.\n",
